-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.6, 6.8.0 RC
-
Windows 11, Qt 6.5.6 Commercial
-
-
99a72a051 (dev), 76fe874d3 (6.8), c49cf8b18 (tqtc/lts-6.5), f254f34cd (dev)
When closing my application in a specific gui state I cause a crash / assert in
QQuickItem::setParentItem(...)
there seems to be a check missing if
d->deliveryAgentPrivate()
is valid (not null)
d->deliveryAgentPrivate()->clearFocusInScope(scopeItem, scopeFocusedItem, Qt::OtherFocusReason, QQuickDeliveryAgentPrivate::DontChangeFocusProperty);
because it crashes in
void QQuickDeliveryAgentPrivate::clearFocusInScope(QQuickItem *scope, QQuickItem *item, Qt::FocusReason reason, FocusOptions options)
with a this of value null.

This is my backtrace.
1 QQuickDeliveryAgentPrivate::q_func qquickdeliveryagent_p_p.h 46 0x7ffa471d995b 2 QQuickDeliveryAgentPrivate::clearFocusInScope qquickdeliveryagent.cpp 482 0x7ffa476eeef6 3 QQuickItem::setParentItem qquickitem.cpp 2672 0x7ffa472a6187 4 QQuickItem::~QQuickItem qquickitem.cpp 2323 0x7ffa472a5943 5 QQuickControl::~QQuickControl qquickcontrol.cpp 958 0x7ffa5cf5993a 6 QQuickPane::~QQuickPane qquickpane.cpp 263 0x7ffa5cfe6c75 7 QQuickPage::~QQuickPage qquickpage.cpp 217 0x7ffa5cfe0c52 8 QQmlPrivate::QQmlElement<QQuickPage>::~QQmlElement<QQuickPage> qqmlprivate.h 99 0x7ffa5d0e5e6e 10 QObjectPrivate::deleteChildren qobject.cpp 2228 0x7ffa3f5bd903 11 QObject::~QObject qobject.cpp 1166 0x7ffa3f5b6b19 12 QQuickItem::~QQuickItem qquickitem.cpp 2365 0x7ffa472a5d8d 13 QQuickLayout::~QQuickLayout qquicklayout.cpp 776 0x7ffaa71e32a1 15 QQmlPrivate::QQmlElement<QQuickStackLayout>::~QQmlElement<QQuickStackLayout> qqmlprivate.h 99 0x7ffaa7207dde 17 QObjectPrivate::deleteChildren qobject.cpp 2228 0x7ffa3f5bd903 18 QObject::~QObject qobject.cpp 1166 0x7ffa3f5b6b19 19 QQuickItem::~QQuickItem qquickitem.cpp 2365 0x7ffa472a5d8d 20 QQuickControl::~QQuickControl qquickcontrol.cpp 958 0x7ffa5cf5993a 21 QQuickPane::~QQuickPane qquickpane.cpp 263 0x7ffa5cfe6c75 22 QQuickPage::~QQuickPage qquickpage.cpp 217 0x7ffa5cfe0c52 23 QQmlPrivate::QQmlElement<QQuickPage>::~QQmlElement<QQuickPage> qqmlprivate.h 99 0x7ffa5d0e5e6e 25 QObjectPrivate::deleteChildren qobject.cpp 2228 0x7ffa3f5bd903 26 QObject::~QObject qobject.cpp 1166 0x7ffa3f5b6b19 27 QWindow::~QWindow qwindow.cpp 201 0x7ffa44ceddee 28 QQuickWindow::~QQuickWindow qquickwindow.cpp 1166 0x7ffa474c0923 30 QQuickApplicationWindow::~QQuickApplicationWindow qquickapplicationwindow.cpp 323 0x7ffa5ceff305 31 QQmlPrivate::QQmlElement<QQuickApplicationWindow>::~QQmlElement<QQuickApplicationWindow> qqmlprivate.h 99 0x7ffa5d0e526e 35 QQmlApplicationEnginePrivate::cleanUp qqmlapplicationengine.cpp 41 0x7ffa88c2fc2d 36 QQmlApplicationEngine::~QQmlApplicationEngine qqmlapplicationengine.cpp 329 0x7ffa88c2eebc 37 main main.cpp 171 0x7ff76771ce0c 38 qtEntryPoint qtentrypoint_win.cpp 50 0x7ff767990317 39 WinMain qtentrypoint_win.cpp 60 0x7ff76799011e
| For Gerrit Dashboard: QTBUG-129699 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 597207,4 | QQuickItem: consistently check the delivery agent pointer | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 597209,4 | Refactor: remove QQuickWindowPrivate::clearFocusInScope helper | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
| 597668,2 | QQuickItem: consistently check the delivery agent pointer | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 597884,2 | QQuickItem: consistently check the delivery agent pointer | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |