QQuickItem: consistently check the delivery agent pointer

In paths that might be executed during destruction of items and
shut-downs, check that the agent is not nullptr already.

Reported crash is not reproducible in a test case, so no auto-test
added.

Fixes: QTBUG-129699
Pick-to: 6.5
Change-Id: Ic913b125655aed57fdb3924e9a4b8754e8095c47
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 99a72a051376101a163ba96a50ee20491347038a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>